major site update

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <p>Online dashboard for <a href="https://discord.gg/AGxjYgQ5GH">The Goofy Goobers</a></p> 
         <p class="quote">"there ate seriveidthbtjiuherebhiddrjbijntuebweheire" - skitters, founder of the looby foobers</p>
         <span id="willow-quote" class="quote"></span>
+        <iframe src="https://discord.com/widget?id=1294422826274652160&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     </body>
     <script src="auth.js"></script>
     <script src="webtextupdate.js"></script>
