--- a/staff.html
+++ b/staff.html
@@ -13,7 +13,8 @@
             <li>Skitters (Founder)</li>
             <li>hackrxd (Developer)</li>
             <li>zobii/zoro (Admin)</li>
-            <li>blaine (Admin)</li>
+            <li><a href="/blaine">kris</a> (Admin)</li>
             <li>willow (Moderator)</li>
         </ul>
-    </body> 
+    </body>
+</html>
