modified some things

--- a/404.html
+++ b/404.html
@@ -8,6 +8,6 @@
         <h1>404 Not Found</h1>
         <p>The page you are looking for does not exist. Double check the URL and try again.</p>
         <p class="contact-footnote">If you believe this is a mistake, please contact <a href="mailto:imhackrxd@gmail.com">hackr</a> using the email link or on Discord</p>
-        <a href="/">Go back to Home</a>
+        <p><a href="/">Go back to Home</a></p>
     </body>
 </html>
