added official file uploads and more anonymous anomaly stuff

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="main.css" rel="stylesheet">
+        <link href="/main.css" rel="stylesheet">
         <title>404 Not Found - The Goofy Goobers</title>
     </head>
     <body>
