added gooberversary movie picker

--- a/blaineisverycool.html
+++ b/blaineisverycool.html
@@ -2,11 +2,10 @@
 <html lang="en">
     <head>
         <title>blaine - The Goofy Goobers</title>
-        <link href="blaine.css" rel="stylesheet">
+        <link href="/blaine.css" rel="stylesheet">
     </head>
     <body>
         <h1>i am very cool</h1>
         <p>i am a very cool person and a very cool admin of <a href="https://www.google.com">the goofy goobers </a> also a certified miku and deltarune+undertale fan 👍</p>
-        
     </body> 
 </html>
