--- a/events.html
+++ b/events.html
@@ -22,12 +22,15 @@
 
         <div class="event">
             <h2>Anonymous Anomaly</h2>
-            <p>Join us for the Anonymous Anomaly event starting on September 27, 2025! This exciting event will feature various activities and challenges. Don't miss out!</p>
+            <p>cool event where each day, a will be chosen to post a message to a channel <strong>anonymously</strong>. you must be active to be chosen</p>
             <p><strong>Start Date:</strong> October 1, 2025</p>
             <p><strong>End Date:</strong> October 11, 2025</p>
+            <p class="timer" id="timer">aaaaaaa</p>
             <a href="/events/anonymous"><button>Learn More</button></a>
         </div>
 
         <h1>Past Events</h1>
         <p>it's empty here.. almost too empty?</p>
     </body>
+    <script src="/anonymoustimer.js"></script>
+</html>
