--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <nav class="navbar">
             <a href="/">Home</a>
             <a href="/staff">Staff</a>
+            <a href="/events">Events</a>
             <span id="auth-container">
                 <a href="/auth/discord"><button>Login with Discord</button></a>
             </span>
