--- a/events.html
+++ b/events.html
@@ -19,18 +19,31 @@
         <h1>Current Events</h1>
         <p>no events happening right now i guess this is cool</p>
         <h1>Upcoming Events</h1>
+        <div class="event">
+                <h2>find hackr's stream key!</h2>
+                <p>this event will be a <strong>puzzle-solving</strong> event! the reward is hackr's stream key. sounds fun, right? press learn more for more info.</p>
+                <p><strong>Start Date:</strong> October 1, 2025</p>
+                <p><strong>End Date:</strong> October 11, 2025</p>
+                <p class="timer" id="timer">no estimate released yet =)</p>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXCgBwE%3D"><button>Learn More</button></a>
+            </div>
+        <h1>Past Events</h1>
+            <div class="event">
+                <h2>Anonymous Anomaly</h2>
+                <p>cool event where each day, a will be chosen to post a message to a channel <strong>anonymously</strong>. you must be active to be chosen</p>
+                <p><strong>Start Date:</strong> October 1, 2025</p>
+                <p><strong>End Date:</strong> October 11, 2025</p>
+                <p class="timer" id="timer">over</p>
+                <a href="/events/anonymous"><button>Learn More</button></a>
+            </div>
 
         <div class="event">
-            <h2>Anonymous Anomaly</h2>
-            <p>cool event where each day, a will be chosen to post a message to a channel <strong>anonymously</strong>. you must be active to be chosen</p>
-            <p><strong>Start Date:</strong> October 1, 2025</p>
-            <p><strong>End Date:</strong> October 11, 2025</p>
-            <p class="timer" id="timer">aaaaaaa</p>
-            <a href="/events/anonymous"><button>Learn More</button></a>
+                <h2>Gooberversary</h2>
+                <p>24 hour event where we all get in VC and celebrate 1 year of this stupid, stupid server.</p>
+                <p><strong>Date:</strong> October 11, 2025</p>
+                <p class="timer" id="timer">over</p>
+                <a href="/events/"><button>haha fuck you this leads nowhere</button></a>
         </div>
-
-        <h1>Past Events</h1>
-        <p>it's empty here.. almost too empty?</p>
     </body>
-    <script src="/anonymoustimer.js"></script>
+    <!-- <script src="/anonymoustimer.js"></script> -->
 </html>
