--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <nav class="navbar">
             <a href="/">Home</a>
-            <a href="/staff">Staff</a>
+            <a href="/members/">Members</a>
             <a href="/events">Events</a>
             <span id="auth-container">
                 <a href="/auth/discord"><button>Login with Discord</button></a>
